# Discord-Werewolf

./: README.md  pyproject.toml
src/werewolf/: bot.py  game.py  gamemodes.py
src/werewolf/cogs/: Werewolf.py
